# repocheck

./: .gitignore  LICENSE  README.md  README.pt-BR.md  index.html
.claude/: settings.json
docs/: design.md  design.pt-BR.md
docs/superpowers/plans/: 2026-07-01-repo-safety-check-phase1-cli-precheck.md  2026-07-01-repo-safety-check-phase2-vm-orchestration.md  2026-07-01-repo-safety-check-phase3-static-scanners.md  2026-07-01-repo-safety-check-phase4-dynamic-step.md  2026-07-01-repo-safety-check-phase5-verdict-report.md  2026-07-01-repo-safety-check-phase6-skill-llm-review.md
docs/superpowers/specs/: 2026-07-01-repo-safety-check-design.md
repocheck/: pyproject.toml
repocheck/.claude/skills/repo-safety-check/: SKILL.md
repocheck/src/repocheck/: analysis.py  bitbucket_client.py  cli.py  github_client.py  gitlab_client.py  platform.py  popular_names.py  precheck.py  report.py  spinner.py  typosquat.py  verdict.py  vm.py
repocheck/tests/: test_analysis.py  test_analysis_integration.py  test_analyze_script.py  test_bitbucket_client.py  test_cli.py  test_github_client.py  test_gitlab_client.py  test_platform.py  test_precheck.py  test_report.py  test_spinner.py  test_typosquat.py  test_verdict.py  test_vm.py  test_vm_integration.py
repocheck/vm_scripts/: analyze.py
