[project]
name = "repocheck"
version = "0.1.0"
description = "Analisa repositórios git em busca de código malicioso antes de clonar/instalar localmente."
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "requests>=2.31",
]

[project.scripts]
repocheck = "repocheck.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repocheck"]
