[project]
name = "repocheck"
version = "0.1.0"
description = "Analyzes git repositories for malicious content before you clone/install them locally."
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "requests>=2.31",
]

[project.scripts]
repocheck = "repocheck.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
    "detect-secrets>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repocheck"]
